# songscr

./: .gitignore  AUDIT.md  DEPENDENCIES.md  MIGRATION_GUIDE.md  PERFORMANCE_BASELINE.json  QUICK_FIXES.sh  README.md  REFACTORING_PLAN.md  SECRETS_SCAN.csv  USER_MANUAL.md  pyproject.toml  requirements.txt  sample.ast.json  sample.fmt.songscr  sample.mid  sample.songscr
.github/workflows/: ci.yml
songscr/: analyze.py  ast.py  automation.py  bass.py  chords.py  cli.py  core.py  gui.py  guitar_voicings.py  io_utils.py  lint.py  lyrics.py  midi.py  midi_dump.py  musicxml.py  parser.py  pipeline.py  render.py  render_drums.py  render_melody.py  song_settings.py  struct.py  styles.py  timing.py
songscr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_analyze_basic_text.py  test_analyze_generated_tracks.py  test_analyze_json.py  test_analyze_lyrics_metrics.py  test_analyze_playback_plan.py  test_auto_lint.py  test_chords_voicings_snapshot.py  test_drum_lint_bracket_len.py  test_expand_templates.py  test_fmt_idempotent.py  test_guitar_voicings.py  test_io_utils.py  test_lint_clean_sample.py  test_lyrics_lint.py  test_melody_expression_lint.py  test_melody_lint_grid.py  test_musicxml_export.py  test_render_dump_snapshot.py  test_scope_leakage.py  test_struct_lint_loop.py
tests/fixtures/: auto_bad_syntax.songscr  auto_section_reverb.dump.txt  auto_section_reverb.songscr  auto_track_cutoff.dump.txt  auto_track_cutoff.songscr  bass_pattern_root.dump.txt  bass_pattern_root.songscr  bass_pattern_root5_eighths.dump.txt  bass_pattern_walkup.dump.txt  (+50 more)
