[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "songscr"
version = "0.1.0"
description = "SongScript CLI: deterministic text-to-MIDI compiler"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Dustin"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=9,<10"]

[project.scripts]
songscr = "songscr.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
